<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <CheckBox
        android:id="@+id/chk_task_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/lv_text_left_margin"
        android:layout_marginStart="@dimen/lv_text_left_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="Title" />

        <TextView
            android:id="@+id/tv_task_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Description" />
    </LinearLayout>
</RelativeLayout>